--- a/final-project/package.json
+++ b/final-project/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   }
